# CSCS-Internship-2022

./: README.md  chol.cu
bechmarks/cholesky_cpu/: chol_cpu  chol_cpu.cpp  time_matrices_cpu.txt
bechmarks/cholesky_gpu/: README_chol.txt  chol.cu  chol_CUDA  plots_times.py  time_matrices.txt
cholesky_cpu/: README  chol_cpu.cpp
tileDataType/: CMakeLists.txt  tileType.cpp
tileDataType_API/: CMakeLists.txt  main.cpp
tileDataType_API/include/: api_cholesky.h  miscellaneous_functions.h
tileDataType_Cholesky/: choleskyFactor.txt  main.cpp
tileDataType_Cholesky/include/: api_cholesky.h  miscellaneous_functions.h  tile_type.h
tiledCholeskyGPU/: .main.cpp.swp  CMakeLists.txt  README_chol.txt  main.cpp  tiledGPU
tiledCholeskyGPU/include/: api_cholesky.h  cublas_api_cholesky.h  miscellaneous_functions.h  tile_type_GPU.h
tiledCholesky_parallel/: CMakeLists.txt  main.cpp
tiledCholesky_parallel/include/: api_cholesky.h  miscellaneous_functions.h  tile_type.h
tiledCholesky_parallel/plots/: timeTile_1000.eps  timeTile_10000.eps  timeTile_12500.eps  timeTile_15000.eps  timeTile_2500.eps  timeTile_5000.eps  timeTile_7500.eps  timeTiledCholesky_p05.txt  timeTiledCholesky_p10.txt  timeTiledCholesky_p15.txt  timeTiledCholesky_p20.txt  timeTiledCholesky_p25.txt
